                               that expired one month ago or earlier.
                             - the remailer automatically creates new Mixmaster
                               keys if the current ones are about to expire or
                               already are expired.
                             - the latest key from secring.mix is written to
                               key.txt. It used to be the first one. Since
                               creation of new mix key appends the key, this
                               seemed sensible.
                           Mixmaster now generates dummy messages automatically
                             as mail enters and exits the pool.

2002-xx-xx      3.0a2      New Star-Exclude feature by Colin Tuckley: 
                             User-selected remailers can be excluded from 
                             being chosen as random hops.
                           Have stats on intermediate vs. final hop count
                             (closes: #649900).
                           Handle a pool we cannot read correctly: don't close
                             the NULL dir handle (segfaults on *bsd). We also
                             print a warning in that case now.

2003-02-15                 Add max capability for Type I.
                           Make sure DH/DSA param file is actually opened before
                             writing to it.  Fixes a segfault in case it is not.
                           Fix a problem in blockrequest() where a buffer
                             could have been used after it was free()d which
                             resulted in segfaults.
                           Install script tweaks
                           Check that feedback buffer is not null before
                             operating on it in chain_select().
                             Closes #631353, thanks Sami Farin.